# usb-descriptors-rs

./: Cargo.toml
src/: cdc.rs  hid.rs  lib.rs
tests/compile-pass/: 01-simple.rs
