[package]
name = "usb-descriptors"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
bitfield = "0.13.2"

[dev-dependencies]
trybuild = "1.0.27"
